--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 VITE_API_URL="http://19429ba06ff2.vps.myjino.ru/api"
-VITE_COMMANDID="OTUS_React-2025-05"
+VITE_COMMANDID="OTUS_React-2025-05-Grigoriy"
