feat: use graphql in login

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 VITE_API_URL="https://19429ba06ff2.vps.myjino.ru/api"
 VITE_COMMANDID="OTUS_React-2025-05-Grigoriy"
+VITE_API_GRAPHQL_URL="https://cea3c11a3f62.vps.myjino.ru/graphql"
